--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,6 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/use
 minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.1
 loader_version=0.14.21
@@ -17,3 +16,6 @@ archives_base_name = TabNames
 
 # Mod compability
 is_stable = true
+
+# Dependencies
+placeholder_api_version = 2.1.1+1.20
